# libexpat

./: .gitignore  .travis.sh  .travis.yml  README.forked-marcomaggi
expat/: .gitignore  Makefile.am  README.md  acinclude.m4  autogen.sh  configure.ac  configure.sh  distribute.sh  qa.sh  test-driver-wrapper.sh
expat/conftools/: .gitignore
expat/doc/: .gitignore  expat.texi  macros.texi
expat/examples/: Makefile.am
expat/lib/: Makefile.am
expat/meta/autoconf/: expatcfg-support-arc4random-through-libbsd.m4  expatcfg-support-getrandom.m4
expat/meta/autotools/: .gitignore
expat/meta/scripts/: get-version.sh
expat/tests/: .gitignore  Makefile.am  doc-sample--print-outline.c  test-driver-wrapper.sh  xmltest.sh
expat/tests/benchmark/: Makefile.am
expat/xmlwf/: Makefile.am
